_sass/base.scss
/* ... */
/**
 * Our Process
 */
#our-process-box {
  background-color: map-get($primary-colors, "white");
  padding-bottom: 144px;
  padding-top: 144px;

  @include media-breakpoint-down(md) {
    padding-top: 88px;
    padding-bottom: 96px;
  }

  .content-box {
    @include media-breakpoint-down(md) {
      margin-top: 48px;
    }

    #process-accordion {
      h2 {
        margin-top: 0px;
      }

      .accordion-item {
        display: flex;
        margin-bottom: 0px;
      }

      .accordion-line {
        display: flex;
        border-left: solid 2px map-get($neutral-colors, 6);
        position: relative;
        left: 22px;
      }

      .accordion-box {
        padding-bottom: 40px;
      }

      .accordion-body {
        font-family: "Noto Sans", sans-serif;
        margin-left: 58px;
        padding:0;

      }

      .accordion-button {
        color: map-get($neutral-colors, 6);
        font-family: Gilroy, sans-serif;
        font-size: 20px;
        font-style: normal;
        font-weight: 700;
        line-height: 28px;
        padding:0;

        &:not(.collapsed) {
          color: map-get($primary-colors, "black");
        }

        &:focus {
          box-shadow: none;
        }

        &::after {
          content: none;
        }
      }

      .accordion-number {
        height: 40px;
        width: 40px;
        border-radius: 20px;
        border-width: 2px;
        border-style: solid;
        border-color: map-get($neutral-colors, 6);
        box-shadow: 0 0 0 6px map-get($primary-colors, "white");
        align-content: center;
        text-align: center;
        margin-right: 18px;
        font-size: 14px;
        font-family: Gilroy, sans-serif;
      }

      .accordion-number img {
        padding-bottom: 3px;
      }

      .accordion-number-active {
        color: map-get($primary-colors, "black") !important;
        background-color: map-get($primary-colors, "salmon");
        border-style: none;
      }
    }
  }
}

/**
 * Article List
 */
#articles-list {
  background-image: url("images/sketch-border.png");
  background-repeat: no-repeat;
  background-size: 1120px 732px;
  background-position: center;
  padding-bottom: 95px;
  padding-top: 95px;

  @include media-breakpoint-down(md) {
    background-image: none;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 85px;
  }

  @include media-breakpoint-down(lg) {
    background-size: 720px 470px;
  }

  @include media-breakpoint-down(xl) {
    background-size: 950px 620px;
  }

  > h2 {
    margin-bottom: 36px;
    margin-top: 30px;
  }

  .row {
    margin-bottom: 35px;

    @include media-breakpoint-down(md) {
      margin-bottom: 48px;
    }

    .col-12 {
      @include media-breakpoint-down(md) {
        margin-bottom: 48px;
      }
    }
  }
}

/**
 * 404 Page
 */
#not-found-content .not-found-hero {
  background: url("images/desert.jpg");
  background-repeat: no-repeat;
  background-size: cover;

  p,
  h1 {
    color: map-get($primary-colors, "black");
  }

  .hero-content {
    max-width: 860px;
  }
}

/**
 * Home Page
 */
#home-content {
  #content-box-1 {
    @include media-breakpoint-down(md) {
      margin-top: 80px;
    }

    .start-image-box img {
      margin-top: -72px;

      @include media-breakpoint-down(md) {
        display: none;
      }
    }

    .mobile-image-box {
      display: none;

      @include media-breakpoint-down(md) {
        display: block;
      }
    }

    .content-box {
      margin-top: 120px;
      padding-top: 24px;

      @include media-breakpoint-down(md) {
        margin-top: 30px;
        padding-top: 16px;
      }
    }

    .end-image-box {
      margin-top: 144px;
      text-align: right;

      @include media-breakpoint-down(md) {
        display: none;
      }
    }
  }

  #content-box-2 {
    margin-top: 145px;

    @include media-breakpoint-down(md) {
      margin-top: 80px;
    }

    .col-lg-5, .col-md-5 {
      h2 {
        padding-right: 30%;
      }
      p {
        padding-right: 7%;
      }
    }
  }
}
/* ... */

